build/apps/home-assistant/overlays/dev/resources/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-endpoint
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "192.168.40.182"
    # conditions:
    #   ready: true
    # hostname: pod-1
    # nodeName: node-1
    # zone: us-west2-a
